@@ -3863,7 +3863,8 @@ This may or may not be set,
 depending on the specific C compiler being used.
 
 .IP _concat
-A function used to produce variables like $_CPPINCFLAGS. It takes five
+A function used to produce variables like $_CPPINCFLAGS. It takes
+four or five
 arguments: a prefix to concatenate onto each element, a list of
 elements, a suffix to concatenate onto each element, an environment
 for variable interpolation, and an optional function that will be
